@@ -567,7 +567,7 @@ igraph_layout_circle:
 igraph_layout_fruchterman_reingold:
         PARAMS: GRAPH graph, OUT MATRIX res, INTEGER niter=500, REAL maxdelta=VCOUNT(graph), \
                 REAL area=VCOUNT(graph)^2, REAL coolexp=1.5, REAL repulserad=VCOUNT(graph)^3, NULL use_seed, \
-                VECTOR_OR_0 weight
+                VECTOR_OR_0 weight, VECTOR_OR_0 miny, VECTOR_OR_0 maxy
         NAME-R: layout.fruchterman.reingold
         FLAGS: PROGRESS
         IGNORE: RR, RC
@@ -613,7 +613,8 @@ igraph_layout_fruchterman_reingold_3d:
 
 igraph_layout_kamada_kawai_3d:
         PARAMS: GRAPH graph, OUT MATRIX res, INTEGER niter=1000, REAL sigma=VCOUNT(graph)/4, \
-                REAL initemp=10, REAL coolexp=0.99, REAL kkconst=VCOUNT(graph)^2
+                REAL initemp=10, REAL coolexp=0.99, REAL kkconst=VCOUNT(graph)^2 \
+                BOOLEAN fixz
         IGNORE: RR, RC, RNamespace
 
 igraph_layout_graphopt:
