@@ -886,7 +886,9 @@ int igraph_layout_fruchterman_reingold(const igraph_t *graph, igraph_matrix_t *r
 				       igraph_integer_t niter, igraph_real_t maxdelta,
 				       igraph_real_t area, igraph_real_t coolexp, 
 				       igraph_real_t repulserad, igraph_bool_t use_seed,
-				       const igraph_vector_t *weight);
+				       const igraph_vector_t *weight,
+				       const igraph_vector_t *miny,
+				       const igraph_vector_t *maxy);
 int igraph_layout_grid_fruchterman_reingold(const igraph_t *graph, 
 					    igraph_matrix_t *res,
 					    igraph_integer_t niter, igraph_real_t maxdelta, 
@@ -926,7 +928,8 @@ int igraph_layout_fruchterman_reingold_3d(const igraph_t *graph,
 int igraph_layout_kamada_kawai_3d(const igraph_t *graph, igraph_matrix_t *res,
 				  igraph_integer_t niter, igraph_real_t sigma, 
 				  igraph_real_t initemp, igraph_real_t coolexp, 
-				  igraph_real_t kkconst, igraph_bool_t use_seed);
+				  igraph_real_t kkconst, igraph_bool_t use_seed,
+				  igraph_bool_t fixz);
 
 int igraph_layout_graphopt(const igraph_t *graph, 
 			   igraph_matrix_t *res, igraph_integer_t niter,
