@@ -1,3 +1,11 @@
+2008-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/layout.c (igraph_layout_fruchterman_reingold) :
+	'miny' and 'maxy' arguments added
+
+	* src/layout.c (igraph_layout_kamada_kawai_3d) : 'fixz'
+	argument added
+
 2008-03-11  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/cattributes.c (igraph_i_cattribute_get_string_vertex_attr)
